# mbpt_benchmark

./: LICENSE.txt  README.md  cif2input.ipynb  icsd_query.txt  requirements.txt  results.ipynb
cifs/: BeTe_CollCode616439.cif  C_CollCode190650.cif  Ne_CollCode43427.cif  TlBr_CollCode61532.cif
csvs/: bandgap_benchmark.csv  revised_bandgap_benchmark.csv
figures/: plotstyle.mplstyle
g0w0_benchmark/: LICENSE.txt  README.md  main_local.py  main_lsf.py  requirements.txt
qe_yambo_database/: 100001.json  100173.json  10040.json  100467.json  100610.json  104189.json  104870.json  105331.json  107946.json  109291.json  109377.json  109463.json  14124.json  15027.json  15148.json  151953.json  151954.json  152052.json  152053.json  154186.json  154289.json  15452.json  154960.json  156190.json  (+308 more)
qsgw_benchmark/: .gitignore  LICENSE.txt  README.md  main_local.py  main_noctua.py  pyproject.toml  restart_noctua.py
qsgw_benchmark/analysis/: audit_benchmark.ipynb  check_bse_transition_space.ipynb  check_db_entry.ipynb
qsgw_benchmark/job_scripts/: run_noctua.py  run_noctua_finer_kgrid.py
qsgw_benchmark/qsgw_workflow/files/: borlido.csv
qsgw_benchmark/qsgw_workflow/utils/: helper.py  runner.py  sbatch.py  system_config.py
qsgw_benchmark/qsgw_workflow/workflows/: __init__.py  base.py  semiconductor.py
qsgw_benchmark/structures/benchmark/: BeTe_icsd_616439_nsites_2.json  C_icsd_190650_nsites_2.json  Ne_icsd_43427_nsites_1.json  Si_icsd_51688_nsites_2.json  TlBr_icsd_61532_nsites_2.json
qsgw_benchmark/structures/test/: BeTe.json  C.json  Ne.json  Si.json  TlBr.json
(+38 files in other folders)
