[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsgw_workflow"
version = "1.0.0"
description = "An automated QSGW and QSGW^ workflow"
authors = [
    {name = "Max Großmann", email = "max.grossmann@tu-ilmenau.de"},
]
license = {text = "MIT"}
requires-python = ">=3.9,<=3.13"

dependencies = [
    "tqdm",
    "h5py",
    "numpy",
    "ipykernel",
    "matplotlib",
    "pymatgen>2024.8.9",
]

[tool.setuptools.packages.find]
include = ["qsgw_workflow"]

[tool.setuptools.package-data]
"qsgw_workflow.files" = ["publication.mplstyle", "borlido.csv"]